crates/codira_codegen/src/snapshots/codira_codegen__test__literal_types.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func main(){\n        let a = 123;\n        let a = 123u8;\n        let a = 123u16;\n        let a = 123u32;\n        let a = 123u64;\n        let a = 123u128;\n        let a = 1_000_000_u32;\n        let a = 123i8;\n        let a = 123i16;\n        let a = 123i32;\n        let a = 123i64;\n        let a = 123123123123123123123123123123123i128;\n        let a = 1_000_000_i32;\n        let a = 1_000_123.0e-2;\n        let a = 1_000_123.0e-2f32;\n        let a = 1_000_123.0e-2f64;\n    }\n\n    public func add(a:u32) -> u32 {\n        a + 12u32\n    }"
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define void @main() {
body:
  %a15 = alloca double, align 8
  %a14 = alloca float, align 4
  %a13 = alloca double, align 8
  %a12 = alloca i32, align 4
  %a11 = alloca i128, align 8
  %a10 = alloca i64, align 8
  %a9 = alloca i32, align 4
  %a8 = alloca i16, align 2
  %a7 = alloca i8, align 1
  %a6 = alloca i32, align 4
  %a5 = alloca i128, align 8
  %a4 = alloca i64, align 8
  %a3 = alloca i32, align 4
  %a2 = alloca i16, align 2
  %a1 = alloca i8, align 1
  %a = alloca i32, align 4
  store i32 123, ptr %a, align 4
  store i8 123, ptr %a1, align 1
  store i16 123, ptr %a2, align 2
  store i32 123, ptr %a3, align 4
  store i64 123, ptr %a4, align 4
  store i128 123, ptr %a5, align 4
  store i32 1000000, ptr %a6, align 4
  store i8 123, ptr %a7, align 1
  store i16 123, ptr %a8, align 2
  store i32 123, ptr %a9, align 4
  store i64 123, ptr %a10, align 4
  store i128 123123123123123123123123123123123, ptr %a11, align 4
  store i32 1000000, ptr %a12, align 4
  store double 0x40C3889D70A3D70A, ptr %a13, align 8
  store float 0x40C3889D80000000, ptr %a14, align 4
  store double 0x40C3889D70A3D70A, ptr %a15, align 8
  ret void
}

define i32 @add(i32 %0) {
body:
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %add = add i32 %a1, 12
  ret i32 %add
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
