crates/codira_codegen/src/snapshots/codira_codegen__test__loop_expr.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func foo() {\n        loop {}\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: nofree norecurse noreturn nosync nounwind memory(none)
define void @foo() local_unnamed_addr #0 {
body:
  br label %loop

loop:                                             ; preds = %loop, %body
  br label %loop
}

attributes #0 = { nofree norecurse noreturn nosync nounwind memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"
